# gastos-uber

./: .gitignore  README.md  main.py  pyproject.toml
app/: logging.py  parser.py
app/client/: uber_client.py
app/curl/: converter.py
app/enum/: rider.py  trip.py
app/parsers/: dict_parser.py  receipt_parser.py
app/schemas/: receipt.py  riders_schema.py  trip_schema.py
app/utils/: money.py
